--- a/localisation/braz_por/MD_decisions_l_braz_por.yml
+++ b/localisation/braz_por/MD_decisions_l_braz_por.yml
@@ -938,3 +938,4 @@
  convert_l_inf_to_mot_inf: "Converter Infantaria Leve em Infantaria Motorizada"
  convert_mot_to_mech_inf: "Converter infantaria motorizada em mecanizada"
  UKR_convert_stuff: "Ucrânia Converta Modelos"
+ TAI_remove_rival_government: "Remover Governo Rival"
