--- a/localisation/braz_por/MD_focus_CHI_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_CHI_l_braz_por.yml
@@ -551,7 +551,7 @@
  CHI_Construct_Nuclear_Waste_Repository: "Construir um Repositório de Resíduos Nucleares"
  CHI_Construct_Nuclear_Waste_Repository_desc: "O descarte de resíduos radioativos de alto nível, como o combustível nuclear gasto, continua sendo uma consideração importante decorrente de nosso programa de energia nuclear. Resíduos de alto nível precisam ser tratados com extremo cuidado e armazenados em um repositório geológico por décadas para que se degradem. Identificamos a área de Beishan no deserto de Gobi como um local adequado para começar a construir tal repositório."
  CHI_Cheap_Coal_Supremacy: "Supremacia do Carvão Barato"
- CHI_Cheap_Coal_Supremacy_desc: "A China é o maior produtor e consumidor de carvão do mundo, e nossa economia continua a depender dele. Em vez de nos concentrarmos em alternativas irreais, devemos simplesmente aceitar a centralidade do carvão para nossa economia e nos concentrar em explorá-lo o mais eficientemente possível."
+ CHI_Cheap_Coal_Supremacy_desc: "A China é o maior produtor e consumidor de carvão do mundo e nossa economia continua a depender dele. Em vez de focar em alternativas irrealistas, deveríamos simplesmente aceitar a centralidade do carvão para nossa economia e nos concentrar em explorá-lo da forma mais eficiente possível."
  CHI_Mass_Coal_Oil_Conversion_Project: "Projeto de Conversão em Massa Carvão-Petróleo"
  CHI_Mass_Coal_Oil_Conversion_Project_desc: "Converter o carvão em petróleo fará uso de nossa grande oferta do primeiro para ajudar a reduzir nossa deficiência deste último. No entanto, esse processo é extremamente útil, mas também extremamente intensivo em água, piorando nossa já séria escassez de água."
  CHI_First_Tier_Megacity_Development: "Desenvolvimento de Megacidades de Primeira Linha"
