--- a/localisation/braz_por/MD_focus_IRQ_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_IRQ_l_braz_por.yml
@@ -431,7 +431,7 @@
  IRQ_rally_the_kurdish_parties: "Amigo dos Curdos"
  IRQ_rally_the_kurdish_parties_desc: "Devemos deixar as forças curdas no nordeste saberem que nosso partido e nação não representam uma ameaça à sua existência, e devemos fazer isso estabelecendo uma base ideológica em suas áreas."
  IRQ_education_of_rights: "Educação de Direitos"
- IRQ_education_of_rights_desc: "As pessoas não estão educadas sobre seus direitos e se submeterão a qualquer um que queira tirá-los delas. Devemos começar programas que eduquem as pessoas sobre os direitos que lhes foram concedidos."
+ IRQ_education_of_rights_desc: "As pessoas não são educadas sobre seus direitos e se submeterão a qualquer um que queira tirá-los delas. Devemos começar programas que eduquem as pessoas sobre os direitos que lhes foram concedidos."
  IRQ_the_iraqi_identity: "A Identidade Iraquiana"
  IRQ_the_iraqi_identity_desc: "Nossa nação moldou sua identidade principalmente após o Islã e a fé islâmica. Já passou da hora de promovermos uma identidade iraquiana de forma mais aberta."
  IRQ_power_of_the_union: "Poder da União"
