--- a/localisation/braz_por/MD_focus_RAJ_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_RAJ_l_braz_por.yml
@@ -1837,3 +1837,4 @@
  RAJ_focus_mao_pol_below_ten_TT: "§YA influência política maoísta está abaixo de 10§!"
  RAJ_focus_mao_str_below_ten_TT: "§YA força militar maoísta está abaixo de 10§!"
  RAJ_decommodify_the_basics_idea: "Descomodifique o básico"
+ indian_event.25.b: "Esse é um bom negócio!"
