--- a/localisation/braz_por/MD_focus_SER_VOJ_MNT_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_SER_VOJ_MNT_l_braz_por.yml
@@ -1331,7 +1331,7 @@
  MNT_tourist_mecca: "Mecca Turística"
  MNT_tourist_mecca_desc: "Conseguimos criar uma verdadeira meca para os turistas de todo o mundo."
  MNT_revive_industry: "Restaurando o Setor Industrial"
- MNT_revive_industry_desc: "A queda de nosso setor industrial é consequência da má administração da economia iugoslava. Devemos restaurar nossa indústria e consertar a economia!"
+ MNT_revive_industry_desc: "A queda do nosso setor industrial é consequência da má administração da economia iugoslava. Precisamos restaurar nossa indústria e consertar a economia!"
  MNT_save_aluminium_plant: "Planta de Alumínio Podgorica"
  MNT_save_aluminium_plant_desc: "A importância da Planta de Alumínio Podgorica não pode ser descrita, esta planta de alumínio cria a maior parte de nosso PIB. Devemos salvar nossa planta do colapso!"
  MNT_expand_port: "Expandir o Porto de Bar"
