--- a/localisation/braz_por/MD_focus_VEN_l_braz_por.yml
+++ b/localisation/braz_por/MD_focus_VEN_l_braz_por.yml
@@ -662,7 +662,7 @@
  VEN_improving_internet_access: "Melhorando o acesso à Internet"
  VEN_improving_internet_access_desc: "Com a necessidade cada vez maior de acesso à Internet na era moderna, melhorar a infraestrutura de rede nas maiores cidades do nosso país é fundamental se quisermos agilizar muitas comunicações entre o nosso povo e os nossos governos regionais."
  VEN_diversifying_the_economy: "Diversificando a Economia"
- VEN_diversifying_the_economy_desc: "O petróleo é o principal factor impulsionador da nossa economia, mas confiar completamente nele não é eficiente nem a abordagem recomendada para a nossa economia. Ao melhorar as condições de outras indústrias em todo o país, tentaremos incentivar diferentes tipos de indústrias a serem se estabeleceram em nosso país."
+ VEN_diversifying_the_economy_desc: "O petróleo é o principal fator impulsionador da nossa economia, mas depender totalmente dele não é uma abordagem eficiente nem recomendada para nossa economia. Ao melhorar as condições de outras indústrias no país, tentaremos incentivar diferentes tipos de indústrias a se estabelecerem em nosso país."
  VEN_expanding_Venezuelan_airlines: "Expandindo Companhias Aéreas Venezuelanas"
  VEN_expanding_Venezuelan_airlines_desc: "As companhias aéreas são necessárias para que nosso país receba e exporte recursos de dentro do país. Ao injetar dinheiro em nossas companhias aéreas, podemos garantir que elas possam expandir suas instalações em nosso país, o que em troca as ajudará a investir dinheiro na expansão do aeroportos em todo o país."
  VEN_domestic_manufacturing: "Fabricação Doméstica"
@@ -692,7 +692,7 @@
  VEN_joining_globalized_trade: "Aderindo ao Comércio Globalizado"
  VEN_joining_globalized_trade_desc: "A nação prioriza a racionalização dos processos comerciais e a remoção de barreiras ao comércio internacional. A Venezuela torna-se mais apta a facilitar o comércio, garantindo o fluxo eficiente de bens e serviços através das fronteiras."
  VEN_ending_oil_dependency: "Acabar com a dependência do petróleo"
- VEN_ending_oil_dependency_desc: "Embora sejamos muito ricos em petróleo, e a maior parte da nossa economia seja impulsionada por ele, não devemos permitir que ele tome completamente a nossa economia, devemos diversificar e expandir as indústrias já existentes no nosso país não afiliadas a ele."
+ VEN_ending_oil_dependency_desc: "Embora sejamos muito ricos em petróleo e a maior parte da nossa economia seja impulsionada por ele, não devemos deixar que ele tome conta completamente da nossa economia; precisamos diversificar e expandir as indústrias já existentes em nosso país e não a ele filiadas."
  VEN_privitazing_job_sectors: "Privitazing Setores de Emprego"
  VEN_privitazing_job_sectors_desc: "O governo identifica cuidadosamente sectores de emprego específicos que beneficiariam da privatização. Estes sectores podem incluir indústrias como a indústria transformadora, o desenvolvimento de infra-estruturas e os serviços, onde o investimento privado e a concorrência podem aumentar a eficiência."
  VEN_investing_into_construction: "Investimentos em Construção"
