--- a/localisation/braz_por/MD_tooltips_l_braz_por.yml
+++ b/localisation/braz_por/MD_tooltips_l_braz_por.yml
@@ -807,3 +807,4 @@
  CHI_SCO_Exploit_Economic_Clout_TT: "Este §Yfocus§! aumentará a §Yinfluência da [CHI.GetFlag]China§! em todos os países membros da §YSCO§!."
  TAI_COM_ruling_tt: "O partido no poder atualmente é membro da §RCoalizão Pan-Vermelha§!"
  TAI_KMT_ruling_tt: "O partido no poder atualmente é membro da §CCoalizão Pan-Azul§!"
+ TAI_recover_china_TT: "Todos os estados com reivindicação de folhas de begônia de §Y[TAI.Getnamewithflag]§! devem estar sob seu controle."
