--- a/localisation/french/MD_focus_BLR_l_french.yml
+++ b/localisation/french/MD_focus_BLR_l_french.yml
@@ -757,30 +757,30 @@
  BLR_Alpha_KGB_desc: "Le groupe « A » (« Alpha ») du Comité de sécurité de l'État de la République de Biélorussie est une unité antiterroriste du KGB de Biélorussie. L'une des forces spéciales les plus fermées des services spéciaux et des forces de l'ordre de Biélorussie. Les combattants Alpha participent aux activités opérationnelles et de combat menées par les unités du KGB de la République de Biélorussie liées à la détention de suspects d'espionnage, de prise d'otages, de trafic de drogue, de contrebande, de trafic illégal d'armes et de substances radioactives, d'extorsion, de migration illégale. Le groupe A participe à un large éventail d'activités antiterroristes, notamment en assurant la sécurité des grands événements publics et des mesures de sécurité contre le Président de la République de Biélorussie."
  BLR_Country_for_life: "Un pays pour la vie"
  BLR_Country_for_life_desc: "Notre gouvernement a décidé de se montrer plus rusé avec l'opposition et d'attirer à lui ses figures les plus visibles. L'une d'elles est Sergueï Tikhanovsky, organisateur du projet « Un pays pour la vie ». Après les événements qui ont eu lieu, lorsque nous avons refusé de l'arrêter, nous l'avons invité publiquement au gouvernement, où il pourrait contribuer à l'amélioration de notre pays. En attendant, l'opposition elle-même sera divisée par une telle démarche."
- BLR_Amendment_to_Constitution: "Serious Changes in the Constitution"
- BLR_Amendment_to_Constitution_desc: "Our permanent leader, Alexander Lukashenko, recognized that the country needs radical changes and it's time to get away from the sole power of the president. A referendum on changing the constitution was announced, where power will mostly belong to the parliament."
- BLR_Operation_O: "Operation O"
- BLR_Operation_O_desc: "Recent military exercises have shown that our army is quite capable of performing more ambitious tasks than the defense of a certain territory. Lithuania has been using its geographical position in recent years - it is putting pressure on us and Russia, perhaps we can persuade Russia to participate in our adventure, because Lithuania does not have a large defensive alliance behind it"
- BLR_Military_Exercises_Union: "Exercises \"Allied Determination\""
- BLR_Military_Exercises_Union_desc: "Joint military exercises of the Armed Forces of the Russian Federation and the Armed Forces of the Republic of Belarus, which are held on the territory of Belarus"
- BLR_army_on_streets_of_cities: "Mass Protests"
- BLR_army_on_streets_of_cities_desc: "The people rebelled against us, they believe that our government is faking votes in elections and ruining the country in every way. I hope we have prepared well for such events"
- BLR_Kolya: "Kolya Lukashenko"
- BLR_Kolya_desc: "The youngest son of our President is finally ready to become the ruler of our country. His father has been preparing him for this role for a long time, let's see how he will cope with the management of our country"
- BLR_Again_anti_corrupt: "No Corruption!"
- BLR_Again_anti_corrupt_desc: "We will continue to fight corruption as a poison in our body"
- BLR_PR_company: "Large-Scale PR Company"
- BLR_PR_company_desc: "New president needs a large-scale PR company. Where we will use all our resources to highlight the advantages of his coming to power"
- BLR_Russia_nuclear: "Russian Nuclear Weapons"
- BLR_Russia_nuclear_desc: "Russia is ready to deploy its nuclear weapons here, do we agree?"
+ BLR_Amendment_to_Constitution: "Changements importants dans la Constitution"
+ BLR_Amendment_to_Constitution_desc: "Notre dirigeant permanent, Alexandre Loukachenko, a reconnu que le pays avait besoin de changements radicaux et qu'il était temps d'abandonner le pouvoir exclusif du président. Un référendum sur la modification de la constitution a été annoncé, dans le cadre duquel le pouvoir appartiendra principalement au parlement."
+ BLR_Operation_O: "Opération O"
+ BLR_Operation_O_desc: "Les récents exercices militaires ont montré que notre armée est tout à fait capable d'accomplir des tâches plus ambitieuses que la défense d'un certain territoire. Ces dernières années, la Lituanie a tiré parti de sa position géographique - elle exerce une pression sur nous et sur la Russie. Peut-être pourrons-nous persuader la Russie de participer à notre aventure, car la Lituanie n'a pas d'alliance défensive importante derrière elle."
+ BLR_Military_Exercises_Union: "Exercices « Détermination alliée »"
+ BLR_Military_Exercises_Union_desc: "Exercices militaires conjoints des forces armées de la Fédération de Russie et des forces armées de la République du Belarus, qui se déroulent sur le territoire du Belarus"
+ BLR_army_on_streets_of_cities: "Manifestations de masse"
+ BLR_army_on_streets_of_cities_desc: "Le peuple s'est rebellé contre nous, il pense que notre gouvernement truque les votes lors des élections et ruine le pays à tous points de vue. J'espère que nous nous sommes bien préparés à de tels événements"
+ BLR_Kolya: "Kolya Loukachenko"
+ BLR_Kolya_desc: "Le plus jeune fils de notre Président est enfin prêt à devenir le dirigeant de notre pays. Son père l'a préparé à ce rôle depuis longtemps, voyons comment il va gérer notre pays."
+ BLR_Again_anti_corrupt: "Pas de corruption !"
+ BLR_Again_anti_corrupt_desc: "Nous continuerons à lutter contre la corruption, qui est un poison pour notre société."
+ BLR_PR_company: "Société de relations publiques à grande échelle"
+ BLR_PR_company_desc: "Le nouveau président a besoin d'une société de relations publiques à grande échelle. Nous utiliserons toutes nos ressources pour mettre en évidence les avantages de son arrivée au pouvoir."
+ BLR_Russia_nuclear: "Armes nucléaires russes"
+ BLR_Russia_nuclear_desc: "La Russie est prête à déployer ses armes nucléaires ici, sommes-nous d'accord ?"
  BLR_anti_lgbtqa_stance: "Politique anti-LGBT"
  BLR_Pazniak: "§YBelarusian Nationalists§!"
- BLR_Pazniak_desc: "Nationalist forces seized power in the country. Where will they lead Belarus? Towards a brighter future or the collapse of the country?"
- BLR_rus_zakupki: "Purchases of Russian Equipment"
- BLR_rus_zakupki_desc: "Our army is technically outdated and we need to catch up. We will buy the best Russian equipment for our army"
- BLR_rus_military_academy: "Russian Standards of Military Education"
- BLR_rus_military_academy_desc: "We will align our standards of military personnel training with Russian educational institutions"
- BLR_rus_gaz: "Contracts With Gazprom"
+ BLR_Pazniak_desc: "Les forces nationalistes ont pris le pouvoir dans le pays. Où mèneront-elles le Belarus ? Vers un avenir meilleur ou vers l'effondrement du pays ?"
+ BLR_rus_zakupki: "Achats d'équipements russes"
+ BLR_rus_zakupki_desc: "Notre armée est techniquement dépassée et nous devons la moderniser. Nous achèterons les meilleurs équipements russes pour notre armée."
+ BLR_rus_military_academy: "Normes russes en matière d'éducation militaire"
+ BLR_rus_military_academy_desc: "Nous alignerons nos normes de formation du personnel militaire sur celles des établissements d'enseignement russes."
+ BLR_rus_gaz: "Contrats avec Gazprom"
  BLR_rus_gaz_desc: "We will continue to establish cooperation with Gazprom and provide our country with cheap resources"
  BLR_rofeign_legion: "The Foreign Legion"
  BLR_rofeign_legion_desc: "We will try to learn from the experience of the French and create our own foreign legion"
