--- a/localisation/french/MD_focus_CUB_l_french.yml
+++ b/localisation/french/MD_focus_CUB_l_french.yml
@@ -118,11 +118,11 @@
  cuba_news.20.a: "Une nouvelle force en Amérique ?"
  cuba.21: "ALBA projects are successful"
  cuba.21.t: "ALBA projects are successful"
- cuba.21.d: "With the help of ALBA projects, we were able to increase our influence in other countries, improve our economy, achieve energy independence and develop trade with other countries and alliances"
- cuba.21.a: "Great!"
+ cuba.21.d: "Grâce aux projets ALBA, nous avons pu accroître notre influence dans d’autres pays, améliorer notre économie, atteindre l’indépendance énergétique et développer les échanges commerciaux avec d’autres pays et alliances."
+ cuba.21.a: "Super"
  cuba.22: "ALBA's projects are not successful"
  cuba.22.t: "ALBA's projects are not successful"
- cuba.22.d: "Unfortunately, the ALBA projects did not give the result we wanted. Our economy took a large hit, and the money invested in these projects was lost..."
+ cuba.22.d: "Malheureusement, les projets ALBA n'ont pas donné les résultats escomptés. Notre économie a été durement touchée et l'argent investi dans ces projets a été perdu..."
  cuba.22.a: "This is the end..."
  cuba.33: "We got Navalny!"
  cuba.33.t: "We got Navalny!"
