--- a/localisation/french/MD_focus_GER_l_french.yml
+++ b/localisation/french/MD_focus_GER_l_french.yml
@@ -331,8 +331,8 @@
  GER_Eurodrone_desc: "The Eurodrone project represents a collaborative effort between the defense industries of Germany (Airbus), Italy (Leonardo), and Spain (Airbus and Indra). The participating countries aim to jointly develop and produce a MALE UAS to meet their military requirements. "
  GER_Cooperation_with_Israel: "Cooperation with Israel"
  GER_Cooperation_with_Israel_desc: "By partnering with Israel, we have the opportunity to greatly advance our capabilities in drone warfare. Israel is renowned for its cutting-edge technology and expertise in unmanned aerial systems, making them a valuable ally in this domain. While we place our trust in their knowledge and experience, this collaboration promises to strengthen our own capabilities and effectiveness in utilizing drones for various military and security applications."
- GER_Domestic_Awacs: "Domestic AWACS"
- GER_Domestic_Awacs_desc: "It is imperative that we embark on the development of our own AWACS (Airborne Warning and Control System) to reduce dependence on American technology and demonstrate the excellence of German engineering. By investing in indigenous capabilities, we not only enhance our sovereignty but also showcase our innovation and technical prowess to the international community. Developing our own AWACS system will bolster our defense capabilities and strengthen our position as a leader in cutting-edge technology and engineering."
+ GER_Domestic_Awacs: "AWACS nationaux"
+ GER_Domestic_Awacs_desc: "Il est impératif que nous nous lancions dans le développement de notre propre AWACS (Airborne Warning and Control System) pour réduire notre dépendance à la technologie américaine et démontrer l’excellence de l’ingénierie allemande. En investissant dans les capacités locales, nous renforçons non seulement notre souveraineté, mais nous mettons également en valeur notre innovation et nos prouesses techniques auprès de la communauté internationale. Le développement de notre propre système AWACS renforcera nos capacités de défense et renforcera notre position de leader en matière de technologie et d’ingénierie de pointe."
  GER_Update_Eurodrone: "Update Eurodrone"
  GER_Update_Eurodrone_desc: "Through the enhancement of the Eurodrone, we have the opportunity to bring our capabilities in line with those of our allies and potential adversaries. Upgrading this unmanned aerial system ensures that we remain competitive and effective in addressing contemporary security challenges while also maintaining parity with advancements made by others in the field."
  GER_Reform_Fuhrungsstaab_der_Luftwaffe: "Reform Führungsstab der Luftwaffe"
@@ -360,7 +360,7 @@
  GER_Order_F35: "Order F35"
  GER_Order_F35_desc: "The F-35 Lightning II is a fifth-generation multirole fighter aircraft designed by Lockheed Martin.\nIt is the most advanced fighter jet in the world, with advanced sensors, information fusion, and network connectivity."
  GER_Order_Awacs: "E-3A Sentry"
- GER_Order_Awacs_desc: "The Boeing E-3A Sentry is an airborne early warning and control (AEW&C) aircraft developed by Boeing. E-3s are commonly known as AWACS (Airborne Warning and Control System). Derived from the Boeing 707 airliner, it provides long-range all-weather surveillance, command, control, and communications."
+ GER_Order_Awacs_desc: "Le Boeing E-3A Sentry est un avion de détection et de contrôle aéroporté (AEW&C) développé par Boeing. Les E-3 sont communément appelés AWACS (Airborne Warning and Control System). Dérivé de l'avion de ligne Boeing 707, il assure une surveillance, un commandement, un contrôle et des communications à longue portée par tous les temps."
  GER_order_Drones: "Order IAI Heron 1"
  GER_order_Drones_desc: "IAI Heron 1 is a medium-altitude long-endurance unmanned aerial vehicle (UAV) developed by the Malat division of Israel Aerospace Industries."
  GER_Reform_Heeresflieger: "Reform The Heeresflieger"
@@ -2597,7 +2597,7 @@
  Drones: "Drones"
  GER_breach_of_contract_opinion_I: "Suspendre les limites de règlement final"
  GER_breach_of_contract_opinion_II: "Suspendre les limites de règlement final"
- CAT_awacs: "SDCA"
+ CAT_awacs: "AWACS"
  germany.562.t: "Rappel du Contrat de Règlement Définitif"
  germany.562.d: "Nous approchons de la limite supérieure de l'effectif maximum des troupes de la Bundeswehr, comme indiqué dans le §YGermain Legacy§! établi lors de la réunification. Si nous persistons dans notre processus de renforcement, nous devons nous attendre à ce qu’il dégénère inévitablement en d’importantes tensions internationales."
  germany.562.a: "Noté."
