--- a/localisation/french/MD_scripted_diplomatic_actions_l_french.yml
+++ b/localisation/french/MD_scripted_diplomatic_actions_l_french.yml
@@ -35,7 +35,7 @@
  DIPLO_ACTION_ASSUME_DEBT_DESC: "Nous pouvons recouvrir la dette d'une autre nation pour aider à apaiser leurs problèmes économiques. S'ils choisissent d'accepter cette offre, nous gagnerons une petite quantité d'influence et d'opinion et recouvrirons 25% de leur dette. Elle est d'abord prélevée sur notre trésorerie."
  DIPLO_ACTION_ASSUME_DEBT_ACCEPT: "[THIS.GetNameWithFlag] a accepté!"
  DIPLO_ACTION_ASSUME_DEBT_ACCEPT_DESC: "[THIS.GetNameWithFlag] a accepté le recouvrement de sa dette. Nous avons pris en charge 25% de leur dette actuelle, soulageant une partie du fardeau qui pèse sur [THIS.GetNameWithFlag]."
- DIPLO_ACTION_ASSUME_DEBT_REJECT: "[THIS.GetNameWithFlag] a §Rrejeté§!!"
+ DIPLO_ACTION_ASSUME_DEBT_REJECT: "[THIS.GetNameWithFlag] a §Rrejeté!§!"
  DIPLO_ACTION_ASSUME_DEBT_REJECT_DESC: "Malheureusement [THIS.GetNameWithFlag] a rejeté le recouvrement de sa dette. Peut-être qu'un jour nous pourrions signer un autre accord."
  treasury_more_than_25_debt_tt: "Estimation actuelle de la §YDette§! ! à assumer : $[?tmp|-]b\n"
  base_assume_debt_condition: "Réticence de Base"
@@ -48,7 +48,7 @@
  DIPLO_ACTION_PROPOSE_MUTUAL_INVESTMENT_TREATY_ACCEPT: "[THIS.GetNameWithFlag] §GSigne§! les §YTraité d'investissement mutuel§!"
  DIPLO_ACTION_PROPOSE_MUTUAL_INVESTMENT_TREATY_ACCEPT_DESC: "[THIS.GetNameWithFlag] a signé le §YTraité d'investissement mutuel§!. Nos deux nations se rapprochent rapidement et les investisseurs de notre pays sont déjà intéressés par les nouvelles opportunités commerciales."
  DIPLO_ACTION_PROPOSE_MUTUAL_INVESTMENT_TREATY_REJECT: "[THIS.GetNameWithFlag] §RRejeté§! les §YTraité d'investissement mutuel§!"
- DIPLO_ACTION_PROPOSE_MUTUAL_INVESTMENT_TREATY_REJECT_DESC: "§Y[THIS.GetNameWithFlag]§! a rejeté le §YTraité d'Investissement Mutuel§!. Les investisseurs de notre nation sont déçus que nos deux nations n'aient pas pu parvenir à un accord. Peut-être une autre fois..."
+ DIPLO_ACTION_PROPOSE_MUTUAL_INVESTMENT_TREATY_REJECT_DESC: "[THIS.GetNameWithFlag] a rejeté le §YTraité d'Investissement Mutuel§!. Les investisseurs de notre nation sont déçus que nos deux nations n'aient pas pu parvenir à un accord. Peut-être une autre fois..."
  CANCEL_MUTUAL_INVESTMENT_TREATY_TITLE: "Fin du §YTraité d'investissement mutuel§!"
  CANCEL_MUTUAL_INVESTMENT_TOOLTIP: "Est actuellement dans un §YTraité d'investissement mutuel§! avec §Y[This.GetNameWithFlag]§!\n"
  CANCEL_MUTUAL_INVESTMENT_TREATY_ACTION_DESC: "Nous ne sommes plus intéressés à maintenir notre §YTraité d'Investissement Mutuel§! entre nos deux nations. Il est temps de mettre fin au §YTraité d'Investissement Mutuel§! et de commencer à forger de nouveaux accords pour l'avenir. Mettre fin à l'§YAccord Commercial§! a les effets suivants :\n\nL'influence commerciale diminue de §R50§!\nL'opinion diminue de §R25§! avec un modificateur d'opinion dégressif de §R15§! en raison de la rupture de l'accord\n"
