--- a/localisation/french/MD_techs_l_french.yml
+++ b/localisation/french/MD_techs_l_french.yml
@@ -593,7 +593,7 @@
  AIR_TITLE_MEDIUM_BOMBER: "BOMBARDIERS\nTACTIQUES"
  AIR_TITLE_STRAT_BOMBER: "BOMBARDIERS\nSTRATÉGIQUES"
  AIR_TITLE_CAS: "APPUI AÉRIEN\nRAPPROCHÉ"
- AIR_TITLE_AWACS: "SDCA"
+ AIR_TITLE_AWACS: "AWACS"
  AIR_TITLE_AIR_UAV: "DRONES DE COMBAT"
  NAVAL_TITLE_N_CV: "PORTE-AVIONS NUCLÉAIRES"
  NAVAL_TITLE_LHA: "PORTE-HÉLICOPTÈRES D'INTERVENTION"
