--- a/localisation/french/MD_tooltips_l_french.yml
+++ b/localisation/french/MD_tooltips_l_french.yml
@@ -807,3 +807,4 @@
  CHI_SCO_Exploit_Economic_Clout_TT: "Ce §Yfocus§! augmentera l'§Y[CHI.GetFlag]influence de la Chine§! dans tous les pays membres de §YSCO§!."
  TAI_COM_ruling_tt: "Le parti actuellement au pouvoir est membre de la §RCoalition pan-rouge§!"
  TAI_KMT_ruling_tt: "Le parti actuellement au pouvoir est membre de la §CCoalition pan-bleue§!"
+ TAI_recover_china_TT: "Tous les états avec la revendication de feuille de Bégonia de §Y[TAI.Getnamewithflag]§! devraient être sous votre contrôle."
