--- a/localisation/polish/MD_focus_RAJ_l_polish.yml
+++ b/localisation/polish/MD_focus_RAJ_l_polish.yml
@@ -1837,3 +1837,4 @@
  RAJ_focus_mao_pol_below_ten_TT: "§YWpływy polityczne maoistów są poniżej 10§!"
  RAJ_focus_mao_str_below_ten_TT: "§YSiła militarna maoistów jest poniżej 10§!"
  RAJ_decommodify_the_basics_idea: "Dekomodyfikuj podstawy"
+ indian_event.25.b: "To dobra oferta!"
