--- a/localisation/polish/MD_tooltips_l_polish.yml
+++ b/localisation/polish/MD_tooltips_l_polish.yml
@@ -807,3 +807,4 @@
  CHI_SCO_Exploit_Economic_Clout_TT: "To §Yfocus§! zwiększy §Y[CHI.GetFlag]wpływy Chin§! we wszystkich krajach członkowskich §YSCO§!"
  TAI_COM_ruling_tt: "Obecna partia rządząca jest członkiem §RKoalicji Pan-Czerwona§!"
  TAI_KMT_ruling_tt: "Obecna partia rządząca jest członkiem §CKoalicji Pan-Blue§!"
+ TAI_recover_china_TT: "Wszystkie stany z roszczeniem do liści begonii §Y[TAI.Getnamewithflag]§! powinny być pod Twoją kontrolą."
