--- a/localisation/russian/MD_decisions_l_russian.yml
+++ b/localisation/russian/MD_decisions_l_russian.yml
@@ -938,3 +938,4 @@
  convert_l_inf_to_mot_inf: "Преобразовать легкую пехоту в моторизованную пехоту"
  convert_mot_to_mech_inf: "Преобразовать моторизованную пехоту в механизированную"
  UKR_convert_stuff: "Шаблоны конвертации для Украины"
+ TAI_remove_rival_government: "Устранить конкурирующее правительство"
