--- a/localisation/russian/MD_focus_RAJ_l_russian.yml
+++ b/localisation/russian/MD_focus_RAJ_l_russian.yml
@@ -1837,3 +1837,4 @@
  RAJ_focus_mao_pol_below_ten_TT: "§YПолитическое влияние маоистов ниже 10.§!"
  RAJ_focus_mao_str_below_ten_TT: "§YВоенная мощь маоистов ниже 10.§!"
  RAJ_decommodify_the_basics_idea: "Декоммерческая Основа"
+ indian_event.25.b: "Это выгодная сделка!"
