--- a/localisation/simp_chinese/MD_decisions_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_decisions_l_simp_chinese.yml
@@ -938,3 +938,4 @@
  convert_l_inf_to_mot_inf: "将轻步兵转换为摩托化步兵"
  convert_mot_to_mech_inf: "将摩托化步兵转换为机械化步兵"
  UKR_convert_stuff: "乌克兰转换模板"
+ TAI_remove_rival_government: "移除对立政府"
