--- a/localisation/simp_chinese/MD_focus_RAJ_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_focus_RAJ_l_simp_chinese.yml
@@ -1837,3 +1837,4 @@
  RAJ_focus_mao_pol_below_ten_TT: "§Y毛派政治影响力低于10§!"
  RAJ_focus_mao_str_below_ten_TT: "§Y毛派军事实力低于10§!"
  RAJ_decommodify_the_basics_idea: "基础用品去商品化"
+ indian_event.25.b: "这是一个很好的交易!"
