--- a/localisation/english/MD_focus_RAJ_l_english.yml
+++ b/localisation/english/MD_focus_RAJ_l_english.yml
@@ -811,7 +811,7 @@
  indian_event.25.t: "Dealing with Vipin Khanna"
  indian_event.25.d: "In order to secure his position in the Indian market, Vipin Khanna, a well-known corrupt official in the Indian military industry, offered us a deal that we supposedly cannot refuse. How will we do it?"
  indian_event.25.a: "Goodbye."
- indian_event.26.a: "This is a good deal!"
+ indian_event.25.b: "This is a good deal!"
  RAJ_handl_cor_indefcor: "Handle the Corruption!"
  RAJ_handl_cor_indefcor_desc: "Corruption in the military is ruinous for the security and defense capabilities of our nation. It is necessary to prevent corruption in our army"
  RAJ_clearing_out_the_ranks: "Clearing out the Ranks"
@@ -1101,7 +1101,7 @@
  RAJ_full_india_programme: "Full India Programme"
  RAJ_full_india_programme_desc: "Although it will be hard to acomplish, all of India should be connected to this programme."
  RAJ_only_ujjwala: "Only one Region"
- RAJ_only_ujjwala_desc: "Ony the poorest regions should have this privilege to balance the social situation in the country."
+ RAJ_only_ujjwala_desc: "Only the poorest regions should have this privilege to balance the social situation in the country."
  RAJ_prior_hindus: "Prioritize Hindus"
  RAJ_prior_hindus_desc: "Hindus are the core of the Indian State. We should give them priority in every possible way."
  RAJ_coal_with_right_wing: "Coalition with Military"
