--- a/localisation/french/MD_decisions_l_french.yml
+++ b/localisation/french/MD_decisions_l_french.yml
@@ -938,3 +938,4 @@
  convert_l_inf_to_mot_inf: "Convertir l'infanterie légère en infanterie motorisée"
  convert_mot_to_mech_inf: "Conversion de l'infanterie motorisée en infanterie mécanisée"
  UKR_convert_stuff: "Modèles de conversion pour l'Ukraine"
+ TAI_remove_rival_government: "Supprimer le gouvernement rival"
