--- a/localisation/french/MD_traits_l_french.yml
+++ b/localisation/french/MD_traits_l_french.yml
@@ -165,12 +165,12 @@
  cv_medium_plane_airframe_design_cost_factor: "Coût de conception des chasseurs multirôle embarqués"
  cv_medium_plane_fighter_airframe_design_cost_factor: "Coût de conception des chasseurs de supériorité aérienne embarqués"
  cv_medium_plane_cas_airframe_design_cost_factor: "Coût de conception des appuis aérien rapproché embarqués"
- cv_medium_plane_scout_airframe_design_cost_factor: "Coût de conception des SDCA embarqués"
+ cv_medium_plane_scout_airframe_design_cost_factor: "Coût de conception des AWACS des porte-avions"
  cv_medium_plane_maritime_patrol_airframe_design_cost_factor: "Coût de conception des avions de patrouille maritime embarquées"
  cv_medium_plane_air_transport_airframe_design_cost_factor: "Coût de conception des avions de transport embarqués"
  large_plane_airframe_design_cost_factor: "Coût de conception des bombardiers stratégiques"
  large_plane_maritime_patrol_airframe_design_cost_factor: "Coût de conception des avions de patrouille maritime"
- large_plane_awacs_airframe_design_cost_factor: "Coût de conception des SDCA"
+ large_plane_awacs_airframe_design_cost_factor: "Coût de conception des AWACS"
  large_plane_cas_airframe_design_cost_factor: "Coût de conception des cannonières"
  large_plane_air_transport_airframe_design_cost_factor: "Coût de conception des avions de transport lourd"
  Cat_NAVAL_MODULES_research: "Vitesse de recherche de tous les modules navals"
