--- a/localisation/polish/MD_decisions_l_polish.yml
+++ b/localisation/polish/MD_decisions_l_polish.yml
@@ -938,3 +938,4 @@
  convert_l_inf_to_mot_inf: "Przekształć Milita w Lekką Piechotę"
  convert_mot_to_mech_inf: "Przekształć piechotę zmotoryzowaną w piechotę zmechanizowaną"
  UKR_convert_stuff: "Szablony konwersji Ukrainy"
+ TAI_remove_rival_government: "Usuń rywalizujący rząd"
