--- a/localisation/polish/equipment_l_polish.yml
+++ b/localisation/polish/equipment_l_polish.yml
@@ -577,7 +577,7 @@
  ARM_util_vehicle_5: "LUSAN-2M"
  AST_infantry_weapons: "L1A1"
  AST_infantry_weapons1: "L1A1 SUIT"
- AST_infantry_weapons2: "F88 Austeyr"
+ AST_infantry_weapons2: "F88 Austeyra"
  AST_infantry_weapons3: "F88S Austeyr"
  AST_infantry_weapons4: "F88S-A1 Austeyr"
  AST_infantry_weapons5: "EF88 Austeyr"
@@ -1434,12 +1434,10 @@
  EGY_artillery_0: "RL812"
  FIN_infantry_weapons: "RK 62"
  FIN_infantry_weapons1: "RK 71"
- FIN_infantry_weapons2: "Valmet M82"
+ FIN_infantry_weapons2: "Valmeta M82"
  FIN_infantry_weapons3: "RK 95 TP"
  FIN_infantry_weapons4: "RK 62M1"
  FIN_infantry_weapons5: "RK 62M2"
- FIN_infantry_weapons6: "Sako M23"
- FIN_infantry_weapons7: "Sako M35"
  FIN_APC_2: "Sisu Nasu"
  FIN_APC_2_short: "Sisu Nasu"
  FIN_APC_3: "Patria XA-180"
@@ -1986,14 +1984,6 @@
  IND_SP_R_arty_0_short: "NDL-40"
  IND_SP_R_arty_1: "R-Han 122"
  IND_SP_R_arty_1_short: "R-Han 122"
- HOL_infantry_weapons: "FN FAL"
- HOL_infantry_weapons1: "FN FAL SUIT"
- HOL_infantry_weapons2: "C7"
- HOL_infantry_weapons3: "C7A1"
- HOL_infantry_weapons4: "C7NLD"
- HOL_infantry_weapons5: "C8NLD"
- HOL_infantry_weapons6: "HK416NLD 6.8"
- HOL_infantry_weapons7: "L88A1"
  ENG_infantry_weapons: "L1A1 SLR"
  ENG_infantry_weapons1: "L1A1 SLR SUIT"
  ENG_infantry_weapons2: "L85A1"
@@ -2395,15 +2385,15 @@
  ITA_Heavy_Anti_tank_3_short: "Dardo II SPIKE LR II"
  ITA_Heavy_Anti_tank_4: "VBM Freccia II SPIKE MR/LR III"
  ITA_Heavy_Anti_tank_4_short: "Freccia II SPIKE LR III"
- ITA_Anti_Air_0: "FIM-43"
+ ITA_Anti_Air_0: "FIM-43 Czerwone oczy"
  ITA_Anti_Air_0_desc: "Opracowany przez naszą firmę General Dynamics, ten system rakietowy wykorzystuje pasywne naprowadzanie na podczerwień do śledzenia samolotów w oparciu o ciepło wydobywające się z ich spalin, po tym jak operator wizualnie śledzi cel, tak jak w przypadku każdej innej broni strzeleckiej. Ta broń, wymagająca bezpośredniego trafienia, jest prymitywna, ale skuteczna."
- ITA_Anti_Air_1: "FIM-92"
+ ITA_Anti_Air_1: "Żądło FIM-92"
  ITA_Anti_Air_1_desc: "Zaprojektowany podobnie jak jego poprzednik, ten pasywny pocisk powietrze-ziemia zawiera kilka nowych ulepszeń w stosunku do wcześniejszego modelu, takich jak ulepszona balistyka, oprogramowanie i wariant z podwójną detekcją podczerwieni i UV."
- ITA_Anti_Air_2: "FIM-92E"
+ ITA_Anti_Air_2: "Żądło FIM-92E"
  ITA_Anti_Air_2_desc: "Kontynuując niezawodność platformy „Stinger”, firma General Dynamics ulepszyła system, dodając nowy czujnik przewrócenia i zmienione oprogramowanie sterujące. Zachowanie podczas lotu również uległo znacznej poprawie. Ponadto dramatycznie wzrosła skuteczność w walce z małymi celami, takimi jak drony, rakiety manewrujące i lekkie helikoptery rozpoznawcze."
- ITA_Anti_Air_3: "FIM-194"
+ ITA_Anti_Air_3: "Kusza FIM-194"
  ITA_Anti_Air_3_desc: "Ponieważ samoloty piątej generacji stały się zauważalnie obecne na polu bitwy, najnowsza wersja naszego systemu MANPAD wprowadza szereg zmian, aby stawić czoła temu nowemu wrogowi. Przede wszystkim jego możliwości celowania obejmują celowanie z linii poleceń, kierowanie laserowe, a także celowanie w promieniach UV i IR."
- ITA_Anti_Air_4: "FIM-245"
+ ITA_Anti_Air_4: "FIM-245 Pogromca serc"
  ITA_Anti_Air_4_desc: "System ten stworzony dzięki wysiłkom DARPA jest szczytem naszych platform broni MANPAD. Dzięki ostatnim postępom i miniaturyzacji czujników nasi inżynierowie umożliwili 1 człowiekowi skuteczną moc niszczenia lub unieszkodliwiania niektórych z najlepiej ukrytych samolotów dostępnych naszym przeciwnikom."
  ITA_util_vehicle_0: "FIATA AR59"
  ITA_util_vehicle_1: "Land Rover AR90"
@@ -3076,7 +3066,6 @@
  RAJ_infantry_weapons3: "INSAS 1B"
  RAJ_infantry_weapons4: "AR-M1"
  RAJ_infantry_weapons5: "SIG 716i"
- RAJ_infantry_weapons6: "AK-203"
  RAJ_Anti_tank_2: "Nag poseł"
  RAJ_Heavy_Anti_tank_2: "Gderać"
  RAJ_MBT_1: "Widźajanta"
@@ -3189,7 +3178,7 @@
  SAF_MBT_1: "Olifan 1"
  SAF_MBT_1_short: "Olifant 1"
  SAF_MBT_2: "Olifant1B"
- SAF_MBT_2_short: "Olifant B"
+ SAF_MBT_2_short: "Olifant 1B"
  SAF_MBT_3: "Olifant 2"
  SAF_MBT_3_short: "Olifant 2"
  SAF_MBT_4: "Gepard"
@@ -3613,15 +3602,6 @@
  SPR_infantry_weapons: "Model CETME A"
  SPR_infantry_weapons1: "Model CETME"
  SPR_infantry_weapons2: "CETME Model L"
- SPR_infantry_weapons3: "Heckler & Koch G36"
- SPR_infantry_weapons3_short: "G36E"
- SPR_infantry_weapons4_short: "G36E A2"
- SPR_infantry_weapons5: "Heckler & Koch G36A3"
- SPR_infantry_weapons5_short: "G36E A3"
- SPR_infantry_weapons6: "Heckler & Koch 416A7"
- SPR_infantry_weapons6_short: "HK416A7"
- SPR_infantry_weapons7: "Heckler & Koch 433"
- SPR_infantry_weapons7_short: "HK 433"
  SPR_Anti_tank_1: "Alcotan-100"
  SPR_APC_1: "Firma Food Machinery Corp M-113A2"
  SPR_APC_1_short: "TOA M-113A2"
@@ -4124,9 +4104,7 @@
  UKR_SP_Anti_Air_0: "Skarabeusz SS-21"
  UKR_artillery_0: "2A36 Gigant-B"
  UKR_artillery_1: "2A65"
- UKR_Anti_tank_0: "SPG-9"
  UKR_Anti_tank_1: "9K111 Fagot"
- UKR_Anti_tank_2: "Skif Stugna-P"
  USA_infantry_weapons: "M14"
  USA_infantry_weapons_desc: "Karabin M14, oficjalnie karabin amerykański, kaliber 7,62 mm, M14, to amerykański karabin selektywnego strzelania, który strzela amunicją NATO 7,62 x 51 mm (0,308 cala). Stał się standardowym karabinem armii amerykańskiej w 1959 roku, zastępując karabin M1 Garand w armii amerykańskiej w 1961 roku."
  USA_infantry_weapons1: "M16A1"
@@ -6695,8 +6673,8 @@
  GEO_cas2_short: "SU-25KM Skorpion"
  GER_AS_Fighter1: "F-4F LODOWY"
  GER_AS_Fighter1_short: "F-4F LODOWY"
- GER_AS_Fighter2: "Mikojan MiG-23"
- GER_AS_Fighter2_short: "MiG-23"
+ GER_AS_Fighter2: "MiG-23 Flogger"
+ GER_AS_Fighter2_short: "MiG-23 Flogger"
  GER_AS_Fighter3: "Eurofighter Typhoon 2000 IPA3"
  GER_AS_Fighter3_short: "Tajfun IPA3"
  GER_AS_Fighter4: "Przyszły system walki powietrznej"
@@ -6713,7 +6691,7 @@
  GER_MR_Fighter1: "F-4DE"
  GER_MR_Fighter1_short: "F-4DE"
  GER_MR_Fighter2: "MiG-21 Fishbed"
- GER_MR_Fighter2_short: "MiG-21"
+ GER_MR_Fighter2_short: "Łoże rybne MiG-21"
  GER_MR_Fighter3: "Eurofighter 2000 DA5"
  GER_MR_Fighter3_short: "Eurofighter 2000 DA5"
  GER_MR_Fighter4: "F-35 Lightning II"
@@ -7948,8 +7926,8 @@
  SOV_attack_helicopter3_short: "Mi-28 Spustoszenie"
  SOV_attack_helicopter4: "Kamov Ka-52 Aligator"
  SOV_attack_helicopter4_short: "Aligator Ka-52"
- SOV_attack_helicopter5: "Kamov Ka-60 Aligator"
- SOV_attack_helicopter5_short: "Aligator Ka-60"
+ SOV_attack_helicopter5: "Kamov Ka-60 Kasatka"
+ SOV_attack_helicopter5_short: "Ka-60 Kasatka"
  UKR_attack_helicopter1: "Mil Mi-24A Hind"
  UKR_attack_helicopter1_short: "Mi-24A"
  UKR_attack_helicopter2: "Mil Mi-24 Hind"
@@ -7958,8 +7936,8 @@
  UKR_attack_helicopter3_short: "Mi-28 Spustoszenie"
  UKR_attack_helicopter4: "Kamov Ka-52 Aligator"
  UKR_attack_helicopter4_short: "Aligator Ka-52"
- UKR_attack_helicopter5: "Kamov Ka-60 Aligator"
- UKR_attack_helicopter5_short: "Aligator Ka-60"
+ UKR_attack_helicopter5: "Kamov Ka-60 Kasatka"
+ UKR_attack_helicopter5_short: "Ka-60 Kasatka"
  SYR_attack_helicopter1: "Mil Mi-24 Hind"
  SYR_attack_helicopter1_short: "Mi-24"
  USA_attack_helicopter1: "Kobra AH-1"
@@ -9080,7 +9058,6 @@
  GER_Anti_tank_3_short: "MAC"
  GER_util_vehicle_0_short: "Jupiter"
  GER_util_vehicle_3_short: "Wolf SSA"
- DEN_infantry_weapons: "M/50"
  DEN_infantry_weapons1: "Heckler & Koch M/66"
  DEN_infantry_weapons1_short: "M/66"
  DEN_infantry_weapons2: "Heckler & Koch M/75"
@@ -9095,7 +9072,6 @@
  DEN_infantry_weapons6_short: "HK416M 6.8"
  DEN_infantry_weapons7: "AIF 40"
  DEN_infantry_weapons7_desc: ""
- NOR_infantry_weapons: "M1 Garand"
  NOR_infantry_weapons1: "AG3"
  NOR_infantry_weapons1_short: "AG3"
  NOR_infantry_weapons2_short: "AG3F1"
@@ -9125,3 +9101,27 @@
  IRQ_infantry_weapons5: "AK-12"
  IRQ_infantry_weapons6: "AK-23"
  IRQ_infantry_weapons7: "AK-31"
+ FIN_infantry_weapons6: "Sako M23"
+ FIN_infantry_weapons7: "Sako M35"
+ DEN_infantry_weapons: "M/50"
+ HOL_infantry_weapons: "FN FAL"
+ HOL_infantry_weapons1: "FN FAL SUIT"
+ HOL_infantry_weapons2: "C7"
+ HOL_infantry_weapons3: "C7A1"
+ HOL_infantry_weapons4: "C7NLD"
+ HOL_infantry_weapons5: "C8NLD"
+ HOL_infantry_weapons6: "HK416NLD 6.8"
+ HOL_infantry_weapons7: "L88A1"
+ NOR_infantry_weapons: "M1 Garand"
+ RAJ_infantry_weapons6: "AK-203"
+ SPR_infantry_weapons3: "Hecklera i Kocha G36"
+ SPR_infantry_weapons3_short: "G36E"
+ SPR_infantry_weapons4_short: "G36E A2"
+ SPR_infantry_weapons5: "Hecklera i Kocha G36A3"
+ SPR_infantry_weapons5_short: "G36E A3"
+ SPR_infantry_weapons6: "Hecklera i Kocha 416A7"
+ SPR_infantry_weapons6_short: "HK416A7"
+ SPR_infantry_weapons7: "Hecklera i Kocha 433"
+ SPR_infantry_weapons7_short: "HK 433"
+ UKR_Anti_tank_0: "SPG-9"
+ UKR_Anti_tank_2: "Skif Stugna-P"
