--- a/localisation/russian/MD_tooltips_l_russian.yml
+++ b/localisation/russian/MD_tooltips_l_russian.yml
@@ -807,3 +807,4 @@
  CHI_SCO_Exploit_Economic_Clout_TT: "Этот §Yфокус§! увеличит §Y[CHI.GetFlag]влияние Китая§! во всех странах-членах §YSCO§!."
  TAI_COM_ruling_tt: "Текущая правящая партия - член §RПан-синии коалиции§!"
  TAI_KMT_ruling_tt: "Текущая правящая партия - член §CПан-синии коалиции§!"
+ TAI_recover_china_TT: "Все штаты с претензией §Y[TAI.Getnamewithflag]§! на лист бегонии должны находиться под вашим контролем."
