--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -104,6 +104,12 @@
  HOL_ING_Group_Strategy: "ING Group Expansion Strategies"
  HOL_ING_Group_Strategy_desc: "ING Group Strategy outlines the bank's vision for sustainable growth and digital transformation in the financial sector. By embracing innovation and customer-centric solutions, ING reaffirms its commitment to driving positive change and delivering value to stakeholders."
  HOL_ING_Group_Strategy_Decision_Unlock_TT: "Unlocks §Y$HOL_ING_Group_strategy_category_desc$§! decisions, allowing us to invest in strategies of the ING Bank, increasing the §Ybenefits§! provided by the National Spirit §Y$HOL_ING_Group_Strategies_modifier$§!."
+ HOL_AEGON_Shares_Sell: "AEGON Shares Sell"
+ HOL_AEGON_Shares_Sell_desc: "The sale of AEGON shares marks a strategic move in the Dutch insurance and financial services sector, unlocking value for shareholders and optimizing capital allocation. This transaction underscores AEGON's focus on enhancing shareholder returns and strengthening its core business operations."
+ HOL_Spring_Global_Mail: "Spring Global Mail Expansion"
+ HOL_Spring_Global_Mail_desc: "Spring Global Mail represents Dutch expertise in international mail and logistics solutions. By providing efficient and reliable postal services worldwide, Spring Global Mail facilitates global trade and communication, connecting businesses and consumers across borders."
+ HOL_Tata_Steel_Development: "Tata Steel Development"
+ HOL_Tata_Steel_Development_desc: "Tata Steel Development marks a significant investment in Dutch manufacturing, ensuring the continued growth and competitiveness of the steel industry. This initiative underscores Tata Steel's commitment to innovation and sustainability, strengthening its presence in the Dutch market."
  ###Military
  HOL_Commisariaat_Militaire_Productie: "Commisariaat Militaire Productie"
  HOL_Commisariaat_Militaire_Productie_desc: "The Commissariaat Militaire Productie focuses on coordinating and enhancing military production capabilities across the Netherlands. This initiative aims to streamline procurement processes, foster domestic defense industries, and ensure a steady supply of advanced military equipment."
