--- a/localisation/english/MD_focus_HOL_l_english.yml
+++ b/localisation/english/MD_focus_HOL_l_english.yml
@@ -110,6 +110,10 @@
  HOL_Spring_Global_Mail_desc: "Spring Global Mail represents Dutch expertise in international mail and logistics solutions. By providing efficient and reliable postal services worldwide, Spring Global Mail facilitates global trade and communication, connecting businesses and consumers across borders."
  HOL_Tata_Steel_Development: "Tata Steel Development"
  HOL_Tata_Steel_Development_desc: "Tata Steel Development marks a significant investment in Dutch manufacturing, ensuring the continued growth and competitiveness of the steel industry. This initiative underscores Tata Steel's commitment to innovation and sustainability, strengthening its presence in the Dutch market."
+ HOL_Project_Beethoven: "Project Beethoven"
+ HOL_Project_Beethoven_desc: "With a focus on bolstering the tech sector's growth within the Netherlands, Project Beethoven emerges as a strategic response to concerns raised by industry leaders, including ASML, regarding the country's investment climate. This ambitious initiative, backed by a significant government investment of over 2.5 billion euros, aims to cultivate an environment conducive to domestic expansion for tech giants like ASML, reinforcing the nation's position as a global innovation hub."
+ HOL_Phillips_Healthcare_Expansion: "Phillips Healthcare Expansion"
+ HOL_Phillips_Healthcare_Expansion_desc: "Philips Healthcare Expansion reflects the Netherlands' leadership in healthcare technology and innovation. By expanding its healthcare portfolio, Philips reaffirms its commitment to improving patient outcomes and advancing medical solutions worldwide."
  ###Military
  HOL_Commisariaat_Militaire_Productie: "Commisariaat Militaire Productie"
  HOL_Commisariaat_Militaire_Productie_desc: "The Commissariaat Militaire Productie focuses on coordinating and enhancing military production capabilities across the Netherlands. This initiative aims to streamline procurement processes, foster domestic defense industries, and ensure a steady supply of advanced military equipment."
