--- a/localisation/english/MD_focus_TUR_l_english.yml
+++ b/localisation/english/MD_focus_TUR_l_english.yml
@@ -1,6 +1,8 @@
 ﻿l_english:
  turkey_focus: "Turkish Focus Tree"
  #Ideas
+ TUR_revised_political_party_laws: "Targeted Political Laws"
+ TUR_revised_political_party_laws_desc: "Certain laws have been past that limit the ability of certain political parties to say what they want."
  TUR_scorched_earth_tactics: "Scorched Earth Tactics"
  TUR_supply_distruption: "Logistical Problems"
  TUR_APC_TECH: "APC Technology"
@@ -216,6 +218,7 @@
  TUR_minority_government: "Minority Government"
  TUR_minority_government_desc: "Our government currently doesn't hold a majority of the parliament seats, making decision making very difficult"
  #Tooltips
+ TUR_double_damage_TT: "Will eliminate §H2X§! more §HPKK Insurgents§!\n§H50%§! Chance we lose §H1 Civilian Industry§!"
  TUR_lower_effectiveness_10_TT: "Decreases our §HEffectiveness§! by §R-10%§!"
  TUR_2X_LOSS_TT: "§H50% Chance§! we lose a §H2X More§! Equipment"
  TUR_AIR_LOSS_TT: "§H50% Chance§! we lose a §HTransport Aircraft§!"
@@ -229,6 +232,7 @@
  TUR_PKK_DAMAGE_300_TT: "Eliminating §H300§! §HPKK Insurgents§!"
  TUR_PKK_DAMAGE_200_TT: "Eliminating §H200§! §HPKK Insurgents§!"
  TUR_PKK_DAMAGE_100_TT: "Eliminating §H100§! §HPKK Insurgents§!"
+ TUR_PKK_DAMAGE_100_2_TT: "Arrests §H100§! §HPKK Insurgents§!"
  TUR_PKK_DAMAGE_50_TT: "Eliminating §H50§! §HPKK Insurgents§!"
  TUR_PKK_DAMAGE_25_TT: "Eliminating §H10§! §HPKK Insurgents§!"
  TUR_effectiveness_req_TT: "§HEffectiveness§! is §H80%§! or less"
@@ -1732,6 +1736,20 @@
  TUR_pkk.202.a: "Respond to them with an offensive of our own"
  TUR_pkk.202.b: "Dig in and prepare for the assault"
  TUR_pkk.202.c: "Use scorched earth tactics and fall back"
+ TUR_pkk.203.t: "Massive PKK Convoy Ambushed"
+ TUR_pkk.203.d: "Using captured military and civilian vehicles, the PKK were advancing from [ROOT.TUR_PKK_bases_name] to a different location as a way to avoid being hit by an unexpected attack. However our informants within the PKK warned us of the movement, and we were able to ambush them. Currently this convoy has been encircled by our Jandarma, and they are awaiting orders on what steps they should pursue moving forward."
+ TUR_pkk.203.a: "Destroy everything in the area"
+ TUR_pkk.203.b: "Make an attack and try to capture the equipment"
+ TUR_pkk.203.c: "Starve them out until they surrender"
+ TUR_pkk.204.t: "PKK Attempts to Sow Division"
+ TUR_pkk.204.d: "The PKK has attempted to sow political division within our nation, doing so by calling for mass protests across the nation. Riot police have been put on stand-by, but the congress and our political party are calling for extended measures."
+ TUR_pkk.204.a: "Arrest the ring-leaders"
+ TUR_pkk.204.b: "Use the movement to our advantage"
+ TUR_pkk.204.c: "Pass laws to weaken their movements"
+
+ TUR_pkk.206.t: "Turkish Forces Suffer Defeat"
+ TUR_pkk.206.d: "Reports from the Turkish-Armenian border are suggesting that the Turkish combatants are retreating back into Turkey after being unable to capture PKK operatives that fled to Armenia. Armenian officials have repeated that they did not shelter the PKK, but rather it was an unexpected intrusion, and that the captured PKK fighters will be dealt with."
+ TUR_pkk.206.a: "Okay"
 
  Turkey.1.t: "Özkan Forms a New Party"
  Turkey.1.desc: "After [ROOT.GetLeader] publically called out the deputy Prime Minister, Özkan announced that he was resigning from his position in the parliament and in the party. He also announced that he would be forming a new party, the New Turkey Party. Many current §W[socialism_L]§! MPs have already announced intention of joining him, and many are also trying to join the §W[conservatism_L]§!."
