--- a/localisation/english/MD_focus_CES_l_english.yml
+++ b/localisation/english/MD_focus_CES_l_english.yml
@@ -381,8 +381,8 @@
  CES_western_sport_desc: "Healthy nation! - A strong nation!"
  CES_western_ciphrovisation: "Global Digitalization"
  CES_western_ciphrovisation_desc: "Digitalization will strengthen the growth of our economy"
- CES_western_resourse: "Alternative Energy Sources"
- CES_western_resourse_desc: "We will develop alternative energy sources"
+ CES_western_resource: "Alternative Energy Sources"
+ CES_western_resource_desc: "We will develop alternative energy sources"
  CES_western_liberal_heaven: "Central Asian Liberal Showcase"
  CES_western_liberal_heaven_desc: "We are an example of building a liberal state on the territory of Central Asia"
 
