--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -1049,8 +1049,8 @@
  TAT_western_sport_desc: "Healthy nation! - A strong nation!"
  TAT_western_ciphrovisation: "Global Digitalization"
  TAT_western_ciphrovisation_desc: "Digitalization will strengthen the growth of our economy"
- TAT_western_resourse: "Alternative Energy Resources"
- TAT_western_resourse_desc: "We will develop alternative energy resources"
+ TAT_western_resource: "Alternative Energy Resources"
+ TAT_western_resource_desc: "We will develop alternative energy resources"
  TAT_western_liberal_heaven: "Tatarstan Liberal Showcase"
  TAT_western_liberal_heaven_desc: "We are an example of building a liberal state on the territory of Russia"
 #Communism
