--- a/localisation/english/MD_focus_SUB_l_english.yml
+++ b/localisation/english/MD_focus_SUB_l_english.yml
@@ -767,7 +767,7 @@
  SUB_reform_army: "Standards of the Russian Army"
  SUB_reform_army_desc: "We will finally adopt the standards of the Russian Army"
  TAT_tatneft: "Investments With Tatneft"
- TAT_tatneft_desc: "We are investing more funds in Tatneft to get a greater inflow of resourses"
+ TAT_tatneft_desc: "We are investing more funds in Tatneft to get a greater inflow of resources"
 
  SUB_we_are_at_war: "We Are At War!"
  SUB_we_are_at_war_desc: "We are facing a war for the existence of our state itself, we need to throw all our strength to save it"
